--- a/routegenerator.ipynb
+++ b/routegenerator.ipynb
@@ -4298,11 +4298,36 @@
     "    return cost, ruteoOptimo\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting mysql-connector-python\n",
+      "  Downloading mysql_connector_python-8.0.30-cp310-cp310-win_amd64.whl (7.9 MB)\n",
+      "     ---------------------------------------- 7.9/7.9 MB 14.0 MB/s eta 0:00:00\n",
+      "Collecting protobuf<=3.20.1,>=3.11.0\n",
+      "  Downloading protobuf-3.20.1-cp310-cp310-win_amd64.whl (903 kB)\n",
+      "     ------------------------------------- 903.8/903.8 kB 14.4 MB/s eta 0:00:00\n",
+      "Installing collected packages: protobuf, mysql-connector-python\n",
+      "Successfully installed mysql-connector-python-8.0.30 protobuf-3.20.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install mysql-connector-python"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.4 ('Rutas')",
    "language": "python",
    "name": "python3"
   },
@@ -4316,12 +4341,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f9358f01635aaa8aae510f26f7ad6d28c2c17edde979f59b7532c3bf17de159b"
+    "hash": "67b7d09460269d597aa1407e8b34f66237f4ed068e2eadd2db3410db2db3c875"
    }
   }
  },
