--- a/pruebasPL.ipynb
+++ b/pruebasPL.ipynb
@@ -1738,6 +1738,15 @@
     "it = generate_results(df, itinerarios, grupos)\n",
     "it"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "it.to_html('wft.html')"
+   ]
   }
  ],
  "metadata": {
